--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -45,7 +45,6 @@
     <body>
 
         <div class="mui-container">
-          <div class="mui-panel">
             <div class="Geolocation">
                 <h2>Geolocalização App</h2>
                 <br />
@@ -55,7 +54,6 @@
                 <div id="Longitude">Longitude: </div>
                 <div id="geomap" style="height:300px; width: 100%"></div>
             </div>
-          </div>
         </div>
 
         <script type="text/javascript">
