--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/mui.min.css">
-        <link rel="stylesheet" type="text/css" href="css/mui-colors.min.css">
+        <!-- <link rel="stylesheet" type="text/css" href="css/mui-colors.min.css"> -->
         <script type="text/javascript" src="js/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -38,17 +38,36 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/geolocation.js"></script>
+        <script type="text/javascript" src="js/acelerometro.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
 
         <title>GeoLocation App</title>
     </head>
     <body>
 
+        <div class="mui-appbar">
+            <div class="mui-dropdown">
+              <a id="appbar-more-vert" data-mui-toggle="dropdown"><i class="icon-more-vert"></i></a>
+              <ul class="mui-dropdown__menu mui-dropdown__menu--right">
+
+                <li><a href="/docs/v1/getting-started/introduction">Introduction</a></li>
+                <li><a href="/docs/v1/getting-started/roadmap">Roadmap</a></li>
+                <li><a href="/support">Support</a></li>
+                <li><a href="/feedback">Feedback</a></li>
+              </ul>
+            </div>
+        </div>
+
         <div class="mui-container">
             <div class="Geolocation">
                 <h2>Geolocalização App</h2>
                 <br />
                 <button onclick="showCurrentPosition()" class="mui-btn mui-btn--primary mui-btn--raised">Pegar Localização</button>
+
+
+                <button onclick="startWatch();" class="mui-btn mui-btn--danger mui-btn--raised">Start Watching</button>
+                <button onclick="stopWatch();" class="mui-btn mui-btn--primary mui-btn--raised">Stop Watching</button>
+
                 <h4>Sua localização</h4>
                 <div id="Latitude">Latitude: </div>
                 <div id="Longitude">Longitude: </div>
