--- a/index.html
+++ b/index.html
@@ -75,7 +75,35 @@
     </head>
     <body>
 
-        <div class="mui-appbar">
+<ul class="mui-tabs__bar mui-tabs__bar--justified">
+  <li class="mui--is-active"><a data-mui-toggle="tab" data-mui-controls="pane-justified-1">Geo</a></li>
+  <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-2">Alert</a></li>
+  <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-3">Tab-3</a></li>
+</ul>
+<div class="mui-tabs__pane mui--is-active" id="pane-justified-1">
+
+        <div class="mui-container">
+            <div class="Geolocation">
+                <h2>Geolocalização App</h2>
+                <br />
+                <button onclick="showCurrentPosition()" class="mui-btn mui-btn--primary mui-btn--raised">Pegar Localização</button>
+
+                <h4>Sua localização</h4>
+                <div id="Latitude">Latitude: </div>
+                <div id="Longitude">Longitude: </div>
+                <div id="geomap" style="height:300px; width: 100%"></div>
+            </div>
+        </div>
+</div>
+
+<div class="mui-tabs__pane" id="pane-justified-2">
+    <div class="mui-container">
+        <button onclick="showAlert(); return false;" class="mui-btn mui-btn--danger mui-btn--raised">Alerta</button>
+    </div>
+</div>
+<div class="mui-tabs__pane" id="pane-justified-3">Pane-3</div>
+
+<!--         <div class="mui-appbar">
             <div class="mui-dropdown">
               <a id="appbar-more-vert" data-mui-toggle="dropdown"><i class="icon-more-vert"></i></a>
               <ul class="mui-dropdown__menu mui-dropdown__menu--right">
@@ -86,23 +114,8 @@
                 <li><a href="/feedback">Feedback</a></li>
               </ul>
             </div>
-        </div>
+        </div> -->
 
-        <div class="mui-container">
-            <div class="Geolocation">
-                <h2>Geolocalização App</h2>
-                <br />
-                <button onclick="showCurrentPosition()" class="mui-btn mui-btn--primary mui-btn--raised">Pegar Localização</button>
-
-
-                <button onclick="showAlert(); return false;" class="mui-btn mui-btn--danger mui-btn--raised">Alerta</button>
-
-                <h4>Sua localização</h4>
-                <div id="Latitude">Latitude: </div>
-                <div id="Longitude">Longitude: </div>
-                <div id="geomap" style="height:300px; width: 100%"></div>
-            </div>
-        </div>
 
         <script type="text/javascript">
             app.initialize();
