--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
         );
     }
 
+    function vibrar() {
+        navigator.vibrate(3000);
+    }
+
     </script>
 
         <title>GeoLocation App</title>
@@ -78,7 +82,7 @@
 <ul class="mui-tabs__bar mui-tabs__bar--justified">
   <li class="mui--is-active"><a data-mui-toggle="tab" data-mui-controls="pane-justified-1">Geo</a></li>
   <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-2">Alert</a></li>
-  <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-3">Tab-3</a></li>
+  <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-3">Vibrar</a></li>
 </ul>
 <div class="mui-tabs__pane mui--is-active" id="pane-justified-1">
 
@@ -101,7 +105,11 @@
         <button onclick="showAlert(); return false;" class="mui-btn mui-btn--danger mui-btn--raised">Alerta</button>
     </div>
 </div>
-<div class="mui-tabs__pane" id="pane-justified-3">Pane-3</div>
+<div class="mui-tabs__pane" id="pane-justified-3">
+    <div class="mui-container">
+        <button onclick="vibrar(); return false;" class="mui-btn mui-btn--danger mui-btn--raised">Vibrar</button>
+    </div>
+</div>
 
 <!--         <div class="mui-appbar">
             <div class="mui-dropdown">
