--- a/index.html
+++ b/index.html
@@ -70,7 +70,23 @@
     }
 
     function vibrar() {
-        navigator.vibrate(3000);
+        navigator.vibrate(1000);
+    }
+
+
+    function onSuccess(acceleration) {
+        alert('Acceleration X: ' + acceleration.x + '\n' +
+              'Acceleration Y: ' + acceleration.y + '\n' +
+              'Acceleration Z: ' + acceleration.z + '\n' +
+              'Timestamp: '      + acceleration.timestamp + '\n');
+    };
+
+    function onError() {
+        alert('onError!');
+    };
+
+    function showAcelerometer() {
+        navigator.accelerometer.getCurrentAcceleration(onSuccess, onError);
     }
 
     </script>
@@ -83,6 +99,7 @@
   <li class="mui--is-active"><a data-mui-toggle="tab" data-mui-controls="pane-justified-1">Geo</a></li>
   <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-2">Alert</a></li>
   <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-3">Vibrar</a></li>
+  <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-4">Acele</a></li>
 </ul>
 <div class="mui-tabs__pane mui--is-active" id="pane-justified-1">
 
@@ -110,7 +127,11 @@
         <button onclick="vibrar(); return false;" class="mui-btn mui-btn--danger mui-btn--raised">Vibrar</button>
     </div>
 </div>
-
+<div class="mui-tabs__pane" id="pane-justified-4">
+    <div class="mui-container">
+        <button onclick="showAcelerometer(); return false;" class="mui-btn mui-btn--primary mui-btn--raised">Acelerometro</button>
+    </div>
+</div>
 <!--         <div class="mui-appbar">
             <div class="mui-dropdown">
               <a id="appbar-more-vert" data-mui-toggle="dropdown"><i class="icon-more-vert"></i></a>
